--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1251,10 +1251,10 @@ msgstr ""
 
 #. l10n: %s is FILE or TABLE
 #: js/messages.php:124
-#, fuzzy, php-format
+#, php-format
 #| msgid "Save output to a file"
 msgid "Set log_output to %s"
-msgstr "Save output to a file"
+msgstr "Set log_output to %s"
 
 #. l10n: Enable in this context means setting a status variable to ON
 #: js/messages.php:126
