--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1258,10 +1258,10 @@ msgstr "Set log_output to %s"
 
 #. l10n: Enable in this context means setting a status variable to ON
 #: js/messages.php:126
-#, fuzzy, php-format
+#, php-format
 #| msgid "Enabled"
 msgid "Enable %s"
-msgstr "Enabled"
+msgstr "Enable %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:128
