--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1265,10 +1265,10 @@ msgstr "Enable %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:128
-#, fuzzy, php-format
+#, php-format
 #| msgid "Disabled"
 msgid "Disable %s"
-msgstr "Disabled"
+msgstr "Disable %s"
 
 #. l10n: %d seconds
 #: js/messages.php:130
