--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1285,10 +1285,9 @@ msgstr ""
 "database administrator."
 
 #: js/messages.php:132
-#, fuzzy
 #| msgid "Manage your settings"
 msgid "Change settings"
-msgstr "Manage your settings"
+msgstr "Change settings"
 
 #: js/messages.php:133
 #, fuzzy
