--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1290,10 +1290,9 @@ msgid "Change settings"
 msgstr "Change settings"
 
 #: js/messages.php:133
-#, fuzzy
 #| msgid "More settings"
 msgid "Current settings"
-msgstr "More settings"
+msgstr "Current settings"
 
 #: js/messages.php:135 server_status.php:1366
 #, fuzzy
