Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1301,10 +1301,9 @@ msgstr "Chart Title"
 
 #. l10n: As in differential values
 #: js/messages.php:137
-#, fuzzy
 #| msgid "Difference"
 msgid "Differential"
-msgstr "Difference"
+msgstr "Differential"
 
 #: js/messages.php:138
 #, php-format
