--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1311,10 +1311,9 @@ msgid "Divided by %s:"
 msgstr "Divided by %s:"
 
 #: js/messages.php:140
-#, fuzzy
 #| msgid "Select page"
 msgid "Selected time range:"
-msgstr "Select page"
+msgstr "Selected time range:"
 
 #: js/messages.php:141
 msgid "Group together INSERTs into same table"
