--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1317,7 +1317,7 @@ msgstr "Selected time range:"
 
 #: js/messages.php:141
 msgid "Group together INSERTs into same table"
-msgstr ""
+msgstr "Group together INSERTs into same table"
 
 #: js/messages.php:142
 msgid ""
