--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1333,7 +1333,7 @@ msgstr "From slow log"
 
 #: js/messages.php:144
 msgid "From general log"
-msgstr ""
+msgstr "From general log"
 
 #: js/messages.php:145
 msgid "Analysing & loading logs. This may take a while."
