--- a/po/de.po
+++ b/po/de.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-21 15:15+0200\n"
-"Last-Translator:  <mrbendig@mrbendig.com>\n"
+"PO-Revision-Date: 2011-07-24 21:47+0200\n"
+"Last-Translator:  <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -1841,7 +1841,7 @@ msgstr "Schriftgröße"
 
 #: libraries/File.class.php:220
 msgid "File was not an uploaded file."
-msgstr ""
+msgstr "Bei der Datei handelt es sich um keine hochgeladene Datei,"
 
 #: libraries/File.class.php:259 libraries/File.class.php:388
 #, fuzzy
