--- a/po/de.po
+++ b/po/de.po
@@ -1892,7 +1892,7 @@ msgstr ""
 
 #: libraries/File.class.php:507
 msgid "Error while moving uploaded file."
-msgstr "Fehler beim verschieben der hochgeladenen Datei."
+msgstr "Fehler beim Verschieben der hochgeladenen Datei."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
