--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-24 21:48+0200\n"
+"PO-Revision-Date: 2011-07-24 21:49+0200\n"
 "Last-Translator:  <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -1896,7 +1896,7 @@ msgstr "Fehler beim Verschieben der hochgeladenen Datei."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
-msgstr ""
+msgstr "Die hochgeladene und verschobene Datei kann nicht gelesen werden."
 
 #: libraries/Index.class.php:418 tbl_relation.php:526
 msgid "No index defined!"
