--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-24 21:50+0200\n"
+"PO-Revision-Date: 2011-07-24 21:52+0200\n"
 "Last-Translator:  <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -9996,7 +9996,6 @@ msgid "Monitor Instructions"
 msgstr "Einführung zur Überwachung"
 
 #: server_status.php:1337
-#, fuzzy
 #| msgid ""
 #| "The phpMyAdmin Monitor can assist you in optimizing the server "
 #| "configuration and track down time intensive\n"
@@ -10013,8 +10012,10 @@ msgid ""
 msgstr ""
 "Die phpMyAdmin-Überwachung kann Sie bei der Server-Konfiguration, und auch "
 "beim Aufspühren von zeitintensiven Abfragen unterstützen. Für das Letztere "
-"müssen Sie log_output auf 'TABLE' stellen, und entweder slow_query_log oder "
-"general_log aktivieren."
+"müssen Sie log_output auf 'TABLE' stellen und entweder slow_query_log oder "
+"general_log aktivieren. Beachten Sie aber, dass das Aktivieren der "
+"general_log viele Daten produzieren und die Serverauslastung um bis zu 15% "
+"erhöhen kann."
 
 #: server_status.php:1346
 #, fuzzy
