Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-24 21:52+0200\n"
+"PO-Revision-Date: 2011-07-24 21:54+0200\n"
 "Last-Translator:  <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -10018,7 +10018,6 @@ msgstr ""
 "erhöhen kann."
 
 #: server_status.php:1346
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10050,24 +10049,18 @@ msgid ""
 "statistics from the logs helping you find what caused the\n"
 "        activity spike.</p>"
 msgstr ""
-"<b>Verwendung der Überwachung</b><br />\n"
+"<b>Verwendung der Überwachung:</b><br />\n"
 "OK, Sie sind bereit zum Starten! Sobald Sie 'Überwachung starten' angeklickt "
-"haben, wird ihr Browser in regelmäßigen Intervallen alle angezeigten "
-"Schaubilder aktualisieren. Unter 'Einstellungen' können Sie Schaubilder "
-"hinzufügen und den Aktualisierungs-Intervall ändern, oder beliebige "
-"Schaubilder entfernen, wenn Sie das Zahnrad-Icon des entsprechenden "
-"Schaubilds verwenden.\n"
+"haben, wird Ihr Browser in regelmäßigen Intervallen alle angezeigten "
+"Diagramme aktualisieren. Unter 'Einstellungen' können Sie Diagramme "
+"hinzufügen und das Aktualisierungsintervall ändern oder beliebige Diagramme "
+"entfernen, wenn Sie das Zahnrad-Icon des entsprechenden Schaubilds "
+"verwenden.\n"
 "<p>Wenn Sie eine plötzliche Spitze in der Aktivität feststellen, wählen Sie "
-"den entsprechenden Zeitraum in einem beliebigen Schaubild, in dem Sie die\n"
+"den entsprechenden Zeitraum in einem beliebigen Diagramm, indem Sie die\n"
 "linke Maustaste gedrückt halten und über das Schaubild ziehen. Dies wird "
 "Statistiken aus den Protokollen laden um Sie bei der Auffindung der \n"
 "Aktivitätsspitze zu unterstützen.</p>\n"
-"<p><b>Bitte beachten Sie:</b>\n"
-"Das aktivieren des general_log kann die Serverlast um 5-15% steigern. Seien "
-"Sie es sich bewusst, dass das erzeigen von Statistiken aus den Logs ein \n"
-"sehr Lasten-Intensiver prozess ist. Deshalb ist es ratsam, nur einen kleinen "
-"Zeitraum auszuwählen.\n"
-"</p> "
 
 #: server_status.php:1356
 msgid ""
