Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-24 21:54+0200\n"
+"PO-Revision-Date: 2011-07-24 21:55+0200\n"
 "Last-Translator:  <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -10072,6 +10072,11 @@ msgid ""
 "not required any more.\n"
 "        "
 msgstr ""
+"<b>Bitte beachten Sie:</b>\n"
+"Das Aktivieren des general_log kann die Serverlast um 5-15% steigern. Seien "
+"Sie sich bewusst, dass das Erzeugen von Statistiken aus den Logs ein \n"
+"sehr aufwändiger Prozess ist. Deshalb ist es ratsam, nur einen kleinen "
+"Zeitraum auszuwählen.\n"
 
 #: server_status.php:1369
 msgid "CPU Usage"
