--- a/po/cs.po
+++ b/po/cs.po
@@ -1348,10 +1348,9 @@ msgstr ""
 
 #. l10n: A collection of available filters
 #: js/messages.php:151
-#, fuzzy
 #| msgid "Filter"
 msgid "Filters"
-msgstr "Filtr"
+msgstr "Filtry"
 
 #. l10n: Filter as in "Start Filtering"
 #: js/messages.php:153 navigation.php:270
