Translation update done using Pootle.

--- a/po/cs.po
+++ b/po/cs.po
@@ -1359,7 +1359,7 @@ msgstr "Filtr"
 
 #: js/messages.php:154
 msgid "Filter queries by word/regexp:"
-msgstr ""
+msgstr "Filtrovat dotazy podle slova nebo regulárního výrazu:"
 
 #: js/messages.php:155
 msgid "Group queries, ignoring variable data in WHERE statements"
