--- a/po/cs.po
+++ b/po/cs.po
@@ -1371,10 +1371,9 @@ msgid "Sum of grouped rows:"
 msgstr "Součet sloučených řádků:"
 
 #: js/messages.php:157
-#, fuzzy
 #| msgid "Total"
 msgid "Total:"
-msgstr "Celkem"
+msgstr "Celkem:"
 
 #: js/messages.php:161 libraries/tbl_properties.inc.php:780
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
