--- a/po/cs.po
+++ b/po/cs.po
@@ -1528,10 +1528,9 @@ msgid "Ignore"
 msgstr "Ignorovat"
 
 #: js/messages.php:218
-#, fuzzy
 #| msgid "Add column"
 msgid "Add columns"
-msgstr "Přidat sloupec"
+msgstr "Přidat sloupce"
 
 #: js/messages.php:221
 msgid "Select referenced key"
