--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,8 @@ phpMyAdmin - ChangeLog
 + [interface] Improved server monitoring
 + AJAX for table Structure column Add
 
+3.4.5.0 (not yet released)
+
 3.4.4.0 (not yet released)
 - bug #3323060 [parser] SQL parser breaks AJAX requests if query has unclosed quotes
 - bug #3323101 [parser] Invalid escape sequence in SQL parser
