--- a/po/tr.po
+++ b/po/tr.po
@@ -1371,10 +1371,9 @@ msgid "Sum of grouped rows:"
 msgstr "Gruplanmış satırların toplamı:"
 
 #: js/messages.php:157
-#, fuzzy
 #| msgid "Total"
 msgid "Total:"
-msgstr "Toplam"
+msgstr "Toplam:"
 
 #: js/messages.php:161 libraries/tbl_properties.inc.php:780
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
