Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 18:54+0200\n"
+"PO-Revision-Date: 2011-07-25 18:55+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6957,7 +6957,7 @@ msgid ""
 "b> Please use the improved 'mysqli' extension to avoid any problems."
 msgstr ""
 "Çoklu sorguları kullanma kabiliyeti olmayan PHP'nin onaylamadığı 'mysql' "
-"uzantısını kullanıyorsunuz. <b>Bazı depolanmış yordamların çalıştırılması "
+"uzantısını kullanıyorsunuz. <b>Bazı depolanmış yordamların yürütülmesi "
 "başarısız olabilir!</b> Lütfen herhangi bir sorundan kaçınmak için gelişmiş "
 "'mysql' uzantısı kullanın."
 
