--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 18:55+0200\n"
+"PO-Revision-Date: 2011-07-25 18:56+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1312,7 +1312,7 @@ msgstr "Genel günlükten"
 
 #: js/messages.php:142
 msgid "Analysing & loading logs. This may take a while."
-msgstr "Günlükler inceleniyor ve yükleniyor. Bu biraz zaman alabilir."
+msgstr "Günlükler çözümleniyor ve yükleniyor. Bu biraz zaman alabilir."
 
 #: js/messages.php:143
 msgid ""
