--- a/po/tr.po
+++ b/po/tr.po
@@ -1344,7 +1344,7 @@ msgstr "Günlük tablosuna atla"
 
 #: js/messages.php:148
 msgid "Log analysed, but not data found in this time span."
-msgstr "Günlük incelendi, ama bu zaman aralığında bulunan veri yok."
+msgstr "Günlük çözümlendi, ama bu zaman aralığında bulunan veri yok."
 
 #. l10n: A collection of available filters
 #: js/messages.php:151
