--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 21:38+0200\n"
+"PO-Revision-Date: 2011-07-25 21:39+0200\n"
 "Last-Translator: Abdullah Al-Saedi <abdullah.10@windowslive.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -10793,10 +10793,9 @@ msgid "An index has been added on %s"
 msgstr "تم إضافة الفهرس في %s"
 
 #: tbl_structure.php:497
-#, fuzzy
 #| msgid "Show PHP information"
 msgid "Show more actions"
-msgstr "عرض المعلومات المتعلقة ب  PHP"
+msgstr "عرض المزيد من العمليات"
 
 #: tbl_structure.php:642 tbl_structure.php:644
 msgid "Relation view"
