--- a/po/ar.po
+++ b/po/ar.po
@@ -10851,7 +10851,7 @@ msgstr "اللتبع لـ %s.%s , الإصدار %s  معطل ."
 #: tbl_tracking.php:198
 #, php-format
 msgid "Tracking for %s.%s , version %s is activated."
-msgstr ""
+msgstr "اللتبع لـ %s.%s , الإصدار %s مفعل."
 
 #: tbl_tracking.php:208
 msgid "SQL statements executed."
