--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 21:45+0200\n"
+"PO-Revision-Date: 2011-07-25 21:48+0200\n"
 "Last-Translator: Abdullah Al-Saedi <abdullah.10@windowslive.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -10746,7 +10746,7 @@ msgstr ""
 
 #: tbl_structure.php:170 tbl_structure.php:171
 msgid "Add primary key"
-msgstr ""
+msgstr "إضافة مفتاح رئيسي"
 
 #: tbl_structure.php:172 tbl_structure.php:173
 #, fuzzy
