--- a/po/ar.po
+++ b/po/ar.po
@@ -10755,7 +10755,7 @@ msgstr "إضافة فهرس"
 
 #: tbl_structure.php:174 tbl_structure.php:175
 msgid "Add unique index"
-msgstr ""
+msgstr "إضافة فهرس مميز"
 
 #: tbl_structure.php:176 tbl_structure.php:177
 #, fuzzy
