--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 21:48+0200\n"
+"PO-Revision-Date: 2011-07-25 21:49+0200\n"
 "Last-Translator: Abdullah Al-Saedi <abdullah.10@windowslive.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -10719,10 +10719,9 @@ msgid "Do a \"query by example\" (wildcard: \"%\")"
 msgstr "تجعل \"استعلام بواسطة المثال\" (wildcard: \"%\")"
 
 #: tbl_select.php:260
-#, fuzzy
 #| msgid "Select fields (at least one):"
 msgid "Select columns (at least one):"
-msgstr "اختيار حقول (على الأقل واحد):"
+msgstr "اختيار الأعمدة (واحد على الأقل):"
 
 #: tbl_select.php:278
 msgid "Add search conditions (body of the \"where\" clause):"
