--- a/po/ar.po
+++ b/po/ar.po
@@ -10643,7 +10643,7 @@ msgstr "تحسين"
 
 #: tbl_operations.php:747
 msgid "Rebuild"
-msgstr ""
+msgstr "إعادة بناء"
 
 #: tbl_operations.php:748
 msgid "Repair"
