--- a/po/ar.po
+++ b/po/ar.po
@@ -10615,10 +10615,9 @@ msgid "Empty the table (TRUNCATE)"
 msgstr "إفراغ الجدول (TRUNCATE)"
 
 #: tbl_operations.php:712
-#, fuzzy
 #| msgid "Copy database to"
 msgid "Delete the table (DROP)"
-msgstr "إنسخ قاعدة البيانات إلى"
+msgstr "حذف الجدول (DROP)"
 
 #: tbl_operations.php:733
 msgid "Partition maintenance"
