--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 21:56+0200\n"
+"PO-Revision-Date: 2011-07-25 21:59+0200\n"
 "Last-Translator: Abdullah Al-Saedi <abdullah.10@windowslive.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -10591,7 +10591,7 @@ msgstr "صيانة الجدول"
 
 #: tbl_operations.php:614
 msgid "Defragment table"
-msgstr ""
+msgstr "إلغاء تجزئة الجدول"
 
 #: tbl_operations.php:662
 #, php-format
