--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 21:59+0200\n"
+"PO-Revision-Date: 2011-07-25 22:00+0200\n"
 "Last-Translator: Abdullah Al-Saedi <abdullah.10@windowslive.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -10604,10 +10604,9 @@ msgid "Flush the table (FLUSH)"
 msgstr "إعادة تحميل الجدول (FLUSH)"
 
 #: tbl_operations.php:677
-#, fuzzy
 #| msgid "Dumping data for table"
 msgid "Delete data or table"
-msgstr "إرجاع أو استيراد بيانات الجدول"
+msgstr "حذف البيانات او الجدول"
 
 #: tbl_operations.php:692
 msgid "Empty the table (TRUNCATE)"
