--- a/po/ar.po
+++ b/po/ar.po
@@ -1137,7 +1137,7 @@ msgstr "إحصائيات الإستعلام"
 
 #: js/messages.php:94
 msgid "System CPU Usage"
-msgstr ""
+msgstr "إستخدام النظام للمعالج (CPU)"
 
 #: js/messages.php:95
 msgid "System memory"
