--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 22:04+0200\n"
+"PO-Revision-Date: 2011-07-25 22:05+0200\n"
 "Last-Translator: Abdullah Al-Saedi <abdullah.10@windowslive.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1141,7 +1141,7 @@ msgstr "إستخدام النظام للمعالج (CPU)"
 
 #: js/messages.php:95
 msgid "System memory"
-msgstr ""
+msgstr "ذاكرة النظام"
 
 #: js/messages.php:96
 msgid "System swap"
