Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -1161,10 +1161,9 @@ msgstr "متوسط التحميل"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:102
-#, fuzzy
 #| msgid "Versions"
 msgid "Questions"
-msgstr "نسخ"
+msgstr "العمليات"
 
 #: js/messages.php:103 server_status.php:894
 msgid "Traffic"
