--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 22:05+0200\n"
+"PO-Revision-Date: 2011-07-25 22:06+0200\n"
 "Last-Translator: Abdullah Al-Saedi <abdullah.10@windowslive.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -1182,7 +1182,7 @@ msgstr "حذف الرسم البياني"
 
 #: js/messages.php:106
 msgid "Edit labels and series"
-msgstr ""
+msgstr "حذف العناوين والسلاسل"
 
 #: js/messages.php:107
 msgid "Add chart to grid"
