--- a/po/ja.po
+++ b/po/ja.po
@@ -1280,10 +1280,9 @@ msgid ""
 msgstr ""
 
 #: js/messages.php:132
-#, fuzzy
 #| msgid "Manage your settings"
 msgid "Change settings"
-msgstr "ユーザ設定の管理"
+msgstr "設定の変更"
 
 #: js/messages.php:133
 #, fuzzy
