--- a/po/el.po
+++ b/po/el.po
@@ -1362,10 +1362,9 @@ msgstr ""
 
 #. l10n: A collection of available filters
 #: js/messages.php:151
-#, fuzzy
 #| msgid "Filter"
 msgid "Filters"
-msgstr "Φίλτρο"
+msgstr "Φίλτρα"
 
 #. l10n: Filter as in "Start Filtering"
 #: js/messages.php:153 navigation.php:270
