--- a/po/el.po
+++ b/po/el.po
@@ -1914,7 +1914,7 @@ msgstr ""
 
 #: libraries/File.class.php:507
 msgid "Error while moving uploaded file."
-msgstr ""
+msgstr "Σφάλμα κατά τη μετακίνηση αρχείου αποστολής."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
